tests/baselines/reference/importWithTrailingSlash.errors.txt
/a/b/test.ts(3,3): error TS2339: Property 'a' does not exist on type '{ aIndex: number; }'.
/a/test.ts(3,3): error TS2339: Property 'a' does not exist on type '{ aIndex: number; }'.


==== /a.ts (0 errors) ====
    export default { a: 0 };
    
==== /a/index.ts (0 errors) ====
    export default { aIndex: 0 };
    
==== /a/test.ts (1 errors) ====
    import a from ".";
    import aIndex from "./";
    a.a;
      ~
!!! error TS2339: Property 'a' does not exist on type '{ aIndex: number; }'.
    aIndex.aIndex;
    
==== /a/b/test.ts (1 errors) ====
    import a from "..";
    import aIndex from "../";
    a.a;
      ~
!!! error TS2339: Property 'a' does not exist on type '{ aIndex: number; }'.
    aIndex.aIndex;
    